# lod-berlin-vocabtheme

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
berlin/lod/vocabtheme/config/: config.yml
berlin/lod/vocabtheme/templates/: voc_base.html.jinja  voc_class.html.jinja  voc_helper.html.jinja  voc_ontology.html.jinja  voc_property.html.jinja
